adding 404 page and fixing issues and setting page

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ CLOUDINARY_API_SECRET=iGISN0kVIoUQm5Wjdf676J6Lenw
 
 # Server-side variable for API routes
 CLOUDINARY_CLOUD_NAME=dvsqie2oh
+
+EMAIL_USER=shaktisabhaa@gmail.com
+EMAIL_PASSWORD=your-app-password
